Jupiter/service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  name: "samaa-frameworkless-app-service"
  namespace: "training"
  labels:
    app: "samaa-frameworkless-app"
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: "samaa-frameworkless-app"
