Jupiter/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    "kubernetes.io/tls-acme": "true"
  name: "samaa-frameworkless-app-ingress"
  namespace: "training"
  labels:
    app: "samaa-frameworkless-app"
spec:
  rules:
    - host: "samaa-frameworkless-app.svc.platform.myobdev.com"
      http:
        paths:
          - backend:
              serviceName: "samaa-frameworkless-app-service"
              servicePort: 80
            path: /
  tls:
    - hosts:
        - "samaa-frameworkless-app.svc.platform.myobdev.com"
      secretName: "samaa-frameworkless-app-tls"
